Agregando funcion para formatear numeros

--- a/templatedjango/apptemplate/templates/compras/compras.html
+++ b/templatedjango/apptemplate/templates/compras/compras.html
@@ -209,9 +209,6 @@
         </table>
       </div>
 
-
-
-
       <div class="totales">
 
         <div class="form-group">
@@ -282,6 +279,9 @@
               fecha.value = fecha_parcial.value;
 
             }
+     
+            total_compra.value = numberWithCommas(total_compra.value)      
+
           </script>
           
           <button type="button" class="btn btn-outline-success float-right" data-toggle="modal" data-target="#confirmar"
