Agregando funcionalidad de editar precio en listado productos e iniciando ruta de user manual

--- a/templatedjango/apptemplate/templates/compras/listado_compras.html
+++ b/templatedjango/apptemplate/templates/compras/listado_compras.html
@@ -13,6 +13,8 @@
         <!-- este style es para centar el div de la clase col -->
 
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 card shadow p-3 mb-5 bg-white rounded" id="estos" style="border:none;">
+
+            <h5 style="font-weight: bold;"> LISTADO DE LAS COMPRAS</h5>
             
             {% load static %}
             <div id="membreteContenedor">
